save all measurements
